<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>QchartMeRuler</class>
 <widget class="QWidget" name="QchartMeRuler">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>602</width>
    <height>132</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QLabel" name="label_2">
   <property name="geometry">
    <rect>
     <x>330</x>
     <y>20</y>
     <width>71</width>
     <height>21</height>
    </rect>
   </property>
   <property name="text">
    <string>标尺颜色：</string>
   </property>
  </widget>
  <widget class="QGroupBox" name="m_SubSgroupBox">
   <property name="geometry">
    <rect>
     <x>290</x>
     <y>50</y>
     <width>291</width>
     <height>61</height>
    </rect>
   </property>
   <property name="title">
    <string>显示次刻度</string>
   </property>
   <property name="checkable">
    <bool>true</bool>
   </property>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>23</y>
      <width>84</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string>次刻度分割数：</string>
    </property>
   </widget>
   <widget class="QSpinBox" name="m_subScaleSpinBox">
    <property name="geometry">
     <rect>
      <x>120</x>
      <y>23</y>
      <width>151</width>
      <height>20</height>
     </rect>
    </property>
    <property name="minimum">
     <number>2</number>
    </property>
    <property name="maximum">
     <number>5</number>
    </property>
   </widget>
  </widget>
  <widget class="QGroupBox" name="groupBox">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>10</y>
     <width>261</width>
     <height>101</height>
    </rect>
   </property>
   <property name="title">
    <string>显示主刻度</string>
   </property>
   <widget class="QCheckBox" name="m_ShowScalevalueCkBox">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>70</y>
      <width>121</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>显示刻度值</string>
    </property>
    <property name="checked">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QSpinBox" name="m_mainScaleSpBox">
    <property name="geometry">
     <rect>
      <x>110</x>
      <y>30</y>
      <width>131</width>
      <height>20</height>
     </rect>
    </property>
    <property name="minimum">
     <number>2</number>
    </property>
    <property name="maximum">
     <number>20</number>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>30</y>
      <width>84</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>主刻度分割数：</string>
    </property>
   </widget>
  </widget>
  <widget class="QPushButton" name="m_ScaleColorBtn">
   <property name="geometry">
    <rect>
     <x>410</x>
     <y>20</y>
     <width>151</width>
     <height>23</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
